Fix getting particle density and speed for testing from GUI